--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -7,5 +7,8 @@
     "test": "exit 0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "googleapis": "^110.0.0"
+  }
 }
