--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -20,9 +20,24 @@ service: auth-server2
 # Check out our docs for more details
 frameworkVersion: "3"
 
+service: auth-server
+
 provider:
   name: aws
   runtime: nodejs18.x
+  region: us-east-1
+  timeout: 30 # optional, in seconds, default is 6
+environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
+functions:
+  getAuthURL:
+    handler: handler.getAuthURL
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
 
 # you can overwrite defaults here
 #  stage: dev
