--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -1,3 +1,18 @@
+# Welcome to Serverless!
+#
+# This file is the main config file for your service.
+# It's very minimal at this point and uses default values.
+# You can always add more config options for more control.
+# We've included some commented out config examples here.
+# Just uncomment any of them to get that config option.
+#
+# For full config options, check the docs:
+#    docs.serverless.com
+#
+# Happy Coding!
+
+configValidationMode: error
+
 service: auth-server
 
 provider:
@@ -18,9 +33,16 @@ functions:
           path: api/get-auth-url
           method: get
 
-  getAccessToken: # Ensure this is indented under 'functions'
+  getAccessToken:
     handler: handler.getAccessToken
     events:
       - http:
           path: api/token/{code}
+          method: get
+
+  getCalendarEvents: # Make sure this is correctly under 'functions'
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
           method: get
