--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,10 @@
       "sizes": "512x512",
       "purpose": "maskable"
     }
-  ]
+  ],
+
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
