--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
     }
   ],
 
-  "start_url": ".",
+  "start_url": "meet",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
