--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1691.0",
+    "cross-env": "^7.0.3",
     "googleapis": "^110.0.0"
   }
 }
