--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "hostech83/meet",
+  "homepage": "meet",
   "repository": "https://github.com/hostech83/meet",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "atatus-spa": "^4.6.3",
+    "cross-env": "^7.0.3",
+    "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -29,7 +31,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
