add CityEventCharts,and EventGenresCharts
add error Boundary, ThemeContext, logo, and fix all fail tests in the App

--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "atatus-spa": "^4.6.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cross-env": "^7.0.3",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "serverless": "^4.4.6",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
